Update pipeline trigger to only include Release branches

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -3,10 +3,7 @@ name: Demo Pipeline
 on:
   push:
     branches:
-      - develop
-  pull_request:
-    branches:
-      - develop
+      - Release/*
 
 jobs:
   build:
