--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,4 +1,4 @@
-name: Demo Pipeline
+name: Harold Pipeline
 
 on:
   push:
@@ -26,22 +26,22 @@ jobs:
       - name: Run demo pipeline script
         run: python app.py
 
-      - name: Upload build artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: demo_build_output
-          path: demo_build_output.txt
+      # - name: Upload build artifact
+      #   uses: actions/upload-artifact@v4
+      #   with:
+      #     name: demo_build_output
+      #     path: demo_build_output.txt
 
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
+  # deploy:
+  #   needs: build
+  #   runs-on: ubuntu-latest
 
-    steps:
-      - name: Download build artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: demo_build_output
-          path: ./deploy_files
+    # steps:
+    #   - name: Download build artifact
+    #     uses: actions/download-artifact@v4
+    #     with:
+    #       name: demo_build_output
+    #       path: ./deploy_files
 
-      - name: Show build output file contents
-        run: cat ./deploy_files/demo_build_output.txt
+    #   - name: Show build output file contents
+    #     run: cat ./deploy_files/demo_build_output.txt
