--- a/.github/workflows/prod-pipeline.yml
+++ b/.github/workflows/prod-pipeline.yml
@@ -1,10 +1,7 @@
-name: Harold Pipeline
+name: prod Pipeline
 
 on:
   push:
-    branches:
-      - develop
-  pull_request:
     branches:
       - develop
 
